fix(PageBuilder): increase context menu z-index

--- a/assets/scss/page_builder/context_menu.scss
+++ b/assets/scss/page_builder/context_menu.scss
@@ -11,7 +11,7 @@
     pointer-events: auto;
     position: absolute;
     width: auto;
-    z-index: 50;
+    z-index: 80;
     font-size: 0.75rem;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12);
     background-color: white;
